# auto-boot

./: .gitignore  Cargo.toml  README.md  disk.img  flake.nix
common/: Cargo.toml
common/src/: lib.rs
host/: Cargo.toml
rp/: Cargo.toml
src/: main.rs
